--- a/gitops/argo/application-base.yaml
+++ b/gitops/argo/application-base.yaml
@@ -1,18 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cobank-platform
+  name: cobank-base
   namespace: argocd
 spec:
   project: default
+
   source:
     repoURL: https://github.com/nickcube2/cobank-cloud-platform.git
-    targetRevision: HEAD
-    path: k8s
+    targetRevision: main
+    path: k8s/base
+
   destination:
     server: https://kubernetes.default.svc
     namespace: cobank
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
