--- a/k8s/istio/virtualservice.yaml
+++ b/k8s/istio/virtualservice.yaml
@@ -1,19 +1,24 @@
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: cobank-vs
+  name: cobank-frontend
   namespace: cobank
 spec:
   hosts:
-  - "cobank.example.com"
+    - "*"
   gateways:
-  - cobank-gateway
+    - cobank-gateway
   http:
-  - match:
-    - uri:
-        prefix: /
-    route:
-    - destination:
-        host: frontend
-        port:
-          number: 80
+    - match:
+        - uri:
+            prefix: /api
+      route:
+        - destination:
+            host: backend.cobank.svc.cluster.local
+            port:
+              number: 5000
+    - route:
+        - destination:
+            host: frontend.cobank.svc.cluster.local
+            port:
+              number: 80
