--- a/apps/frontend/nginx.conf
+++ b/apps/frontend/nginx.conf
@@ -1,8 +1,21 @@
 server {
-  listen 80;
+  listen 8080;
+
+  # Serve the static UI
   location / {
     root /usr/share/nginx/html;
     index index.html;
     try_files $uri $uri/ /index.html;
+  }
+
+  # In local docker-compose, same-origin /api requests are proxied to the backend service.
+  # In Kubernetes, this still works because the backend service name is "backend".
+  location /api/ {
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_pass http://backend:3000;
   }
 }
